Closed Bug 1611568 Opened 5 years ago Closed 5 years ago

Combining diacritic characters cause searches to fail even when "Match Diacritics" is off

Categories

(Core :: Find Backend, defect)

74 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox74 --- wontfix
firefox75 --- fixed

People

(Reporter: alexhenrie24, Assigned: alexhenrie24)

References

Details

Attachments

(1 file)

Guarani words like G̃uahe are spelled with the letter G̃, which is not available as a precomposed character in Unicode. Firefox's in-page search should be smart enough to skip over the combining tilde and still match on the plain letter G.

Assignee: nobody → alexhenrie24
Status: NEW → ASSIGNED
Pushed by malexandru@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f00a9911b0ef Ignore combining diacritic characters when "Match Diacritics" is off. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75

Is this something we should consider uplifting to Beta for 74 or can it ride 75 to release?

Flags: needinfo?(alexhenrie24)
Flags: in-testsuite+

It's not at all urgent. My vote is to wait for it to arrive in 75.

Flags: needinfo?(alexhenrie24)

i am still having as issue for finding words with hebrew diacritics in pdf's - should i open a new bug?

Yes, that may or may not be a pdf.js issue.

Blocks: 1640217
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: