Bug 1611568 - Ignore combining diacritic characters when "Match Diacritics" is off. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D61081